force-app/main/default/objects/Line_Item__c/fields/Merchandise_Name__c.field-meta.xml
<CustomField>
    <fullName>Merchandise_Name__c</fullName>
    <description>This is field which create relation Ship between the objects</description>
    <inlineHelpText>Showing RelationShip</inlineHelpText>
    <label>Merchandise Name</label>
    <referenceTo>Merchandise__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>