force-app/main/default/objects/Line_Item__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>the price of perticular unit</description>
    <inlineHelpText>price of unit</inlineHelpText>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>