force-app/main/default/objects/Line_Item__c/fields/Unit_Sold__c.field-meta.xml
<CustomField>
    <fullName>Unit_Sold__c</fullName>
    <description>Selling Price of products</description>
    <inlineHelpText>selling price of  unit</inlineHelpText>
    <label>Unit Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>